--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
   }).addTo(map);
 
   /* Display a point marker with pop-up text */
-  L.marker([41.77, -72.69]).addTo(map)([41.74792439880373, -72.69045015802064]).addTo(map)([41.55697544505225, -72.65687651754752]).addTo(map)([41.379966087373084, -72.10434290221085]).addTo(map) // EDIT marker coordinates
+  L.marker([41.77, -72.69]).addTo(map)L.marker([41.74792439880373, -72.69045015802064]).addTo(map)L.marker([41.55697544505225, -72.65687651754752]).addTo(map)L.marker([41.379966087373084, -72.10434290221085]).addTo(map) // EDIT marker coordinates
   .bindPopup("Insert pop-up text here"); // EDIT pop-up text message
 
   </script>
