--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <body>
 
   <!-- Display the map and title with HTML division tags  -->
-  <div id="map-title">EDIT map title</div>
+  <div id="map-title">Liv Leaflet Map</div>
   <div id="map"></div>
 
   <!-- Create the interactive map content with JavaScript (.js) -->
@@ -41,7 +41,7 @@
   }).addTo(map);
 
   /* Display a point marker with pop-up text */
-  L.marker([41.77, -72.69]).addTo(map)([41.74792439880373, -72.69045015802064]).addTo(map)([41.55697544505225, -72.65687651754752]).addTo(map)([41.379966087373084, -72.10434290221085]).addTo(map)// EDIT marker coordinates
+  L.marker([41.77, -72.69]).addTo(map)L.marker([41.74, -72.69]).addTo(map)L.marker([41.55, -72.65]).addTo(map)L.marker([41.38, -72.10]).addTo(map)
   .bindPopup("Insert pop-up text here"); // EDIT pop-up text message
 
   </script>
