--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
   }).addTo(map);
 
   /* Display a point marker with pop-up text */
-  L.marker([41.77, -72.69]).addTo(map); // L.marker([41.74, -72.69]).addTo(map); // L.marker([41.55, -72.65]).addTo(map); // L.marker([41.38, -72.10]).addTo(map)
+  L.marker([41.77, -72.69]).addTo(map), L.marker([41.74, -72.69]).addTo(map), L.marker([41.55, -72.65]).addTo(map), L.marker([41.38, -72.10]).addTo(map)
   .bindPopup("Insert pop-up text here"); // EDIT pop-up text message
 
   </script>
