--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 bindP
   /* Display a point marker with pop-up text */
   L.marker([41.77, -72.69]).addTo(map), L.marker([41.74, -72.69]).addTo(map), L.marker([41.55, -72.65]).addTo(map), L.marker([41.38, -72.10]).addTo(map)
- .bindPopup("Hartford, CT"),
+ .bindPopup("Trinity College","Wesleyan University","Connecticut College")
   </script>
 </body>
 </html>
